# agent-mcp-tester

./: .gitignore  AGENTS.md  README.md  SECURITY.md  description.md  mcp-tester.spec  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dispatch.yml  release.yml
.serena/: project.yml
.seretos/: projects.yml
agents/: cluster-tester.md
scripts/: build.ps1
skills/file-findings/: SKILL.md
skills/replay-suite/: SKILL.md
skills/sweep-mcp/: SKILL.md
src/mcp_tester_plugin/: __main__.py  assertions.py  report.py  resolve.py  runner.py  server.py  suites.py
tests/: conftest.py  test_runner_units.py  test_smoke.py
