[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_tester_plugin"
version = "0.0.0"
description = "E2E-tests MCP servers: LLM-driven sweeps that record repeatable test suites, plus a deterministic runner that replays them with zero LLM tokens."
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  "mcp>=1.2",
  "pyyaml>=6",
  "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8",
  "anyio>=4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
  "anyio: run the test on the anyio event loop (provided by the anyio pytest plugin)",
]
